data/derived/comb/progs/unify/prog2380.ml.out
Characters 231-252:
  removeZero (add (padZero l1 l2));;
             ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
